obtener la lista de pedido por estado y refactorizacion para paginacion del HU anterior